--- a/news-backup.html
+++ b/news-backup.html
@@ -26,7 +26,7 @@
   <script src="js/modernizr-3.5.0.min.js"></script>
 </head>
 
-<div class="single">
+<body class="single">
   <div class="container-fluid fh5co_padd_mediya padding_786">
     <div class="container padding_786">
       <nav class="navbar navbar-toggleable-md navbar-light ">
@@ -45,12 +45,12 @@
                 <span class="sr-only">(current)</span>
               </a>
             </li>
-            <li class="nav-item ">
+            <li class="nav-item active">
               <a class="nav-link" href="news.html">Blog
                 <span class="sr-only">(current)</span>
               </a>
             </li>
-            <li class="nav-item active">
+            <li class="nav-item ">
               <a class="nav-link" href="events.html">Events
                 <span class="sr-only">(current)</span>
               </a>
@@ -81,11 +81,7 @@
     </div>
   </div>
 
-  <!-- <div class="container-fluid text-center animate-box">
-    <img class="img-fluid" style="padding: 30px 0px 0px 0px" src="images/ad.jpg" />
-  </div> -->
-
-  <div class="container">
+  <div class="container paddding">
     <div class="row">
 
       <div class="col-12 col-md-9 py-4 Reserved">
@@ -93,19 +89,22 @@
           <div class="row mx-0">
             <div class="col-md-12 animate-box" data-animate-effect="fadeInLeft">
               <div>
-                <div class="fh5co_heading fh5co_heading_border_bottom py-2 mb-4">Events</div>
+                <div class="fh5co_heading fh5co_heading_border_bottom py-2 mb-4">News</div>
               </div>
               <div class="row pb-4">
                 <div class="col-md-5">
                   <div class="fh5co_hover_news_img">
                     <div class="fh5co_news_img">
-                      <img src="images/39-324x235.jpg" alt="" />
+                      <img src="images/39-324x235.jpg" alt="">
                     </div>
                     <div></div>
                   </div>
                 </div>
                 <div class="col-md-7 animate-box">
-                  <a href="single.html" class="fh5co_magna py-2"> PUBG </a>
+                  <a href="single-news.html" class="fh5co_magna py-2"> Magna aliqua ut enim ad minim veniam quis nostrud quis xercitation ullamco. </a>
+                  <br>
+                  <a href="#" class="fh5co_mini_time py-3">
+                    Thomson Smith - April 18,2016 </a>
                   <div class="fh5co_consectetur"> Amet consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut
                     enim ad minim veniam, quis nostrud exercitation.
                     <div class="row" style="margin-top: 15px">
@@ -140,13 +139,16 @@
                 <div class="col-md-5">
                   <div class="fh5co_hover_news_img">
                     <div class="fh5co_news_img">
-                      <img src="images/39-324x235.jpg" alt="" />
+                      <img src="images/39-324x235.jpg" alt="">
                     </div>
                     <div></div>
                   </div>
                 </div>
                 <div class="col-md-7 animate-box">
                   <a href="#" class="fh5co_magna py-2"> Magna aliqua ut enim ad minim veniam quis nostrud quis xercitation ullamco. </a>
+                  <br>
+                  <a href="#" class="fh5co_mini_time py-3">
+                    Thomson Smith - April 18,2016 </a>
                   <div class="fh5co_consectetur"> Quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor
                     in reprehenderit in voluptate velit esse cillum dolore.
 
@@ -182,13 +184,16 @@
                 <div class="col-md-5">
                   <div class="fh5co_hover_news_img">
                     <div class="fh5co_news_img">
-                      <img src="images/39-324x235.jpg" alt="" />
+                      <img src="images/39-324x235.jpg" alt="">
                     </div>
                     <div></div>
                   </div>
                 </div>
                 <div class="col-md-7 animate-box">
                   <a href="#" class="fh5co_magna py-2"> Magna aliqua ut enim ad minim veniam quis nostrud quis xercitation ullamco. </a>
+                  <br>
+                  <a href="#" class="fh5co_mini_time py-3">
+                    Thomson Smith - April 18,2016 </a>
                   <div class="fh5co_consectetur"> Quis nostrud xercitation ullamco laboris nisi aliquip ex ea commodo consequat.
 
                     <div class="row" style="margin-top: 15px">
@@ -223,13 +228,16 @@
                 <div class="col-md-5">
                   <div class="fh5co_hover_news_img">
                     <div class="fh5co_news_img">
-                      <img src="images/39-324x235.jpg" alt="" />
+                      <img src="images/39-324x235.jpg" alt="">
                     </div>
                     <div></div>
                   </div>
                 </div>
                 <div class="col-md-7 animate-box">
                   <a href="#" class="fh5co_magna py-2"> Magna aliqua ut enim ad minim veniam quis nostrud quis xercitation ullamco. </a>
+                  <br>
+                  <a href="#" class="fh5co_mini_time py-3">
+                    Thomson Smith - April 18,2016 </a>
                   <div class="fh5co_consectetur"> Amet consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut
                     enim ad minim veniam, quis nostrud exercitation.
 
@@ -422,6 +430,6 @@
 
   </script>
 
-  </body>
+</body>
 
 </html>
