--- a/about.html
+++ b/about.html
@@ -46,7 +46,7 @@
               </a>
             </li>
             <li class="nav-item ">
-              <a class="nav-link" href="news.html">News
+              <a class="nav-link" href="news.html">Blog
                 <span class="sr-only">(current)</span>
               </a>
             </li>
@@ -56,31 +56,31 @@
               </a>
             </li>
             <li class="nav-item ">
-              <a class="nav-link" href="videos.html">Videos
+              <a class="nav-link" href="videos.html">Latest Videos
                 <span class="sr-only">(current)</span>
               </a>
             </li>
             <!-- <li class="nav-item ">
-              <a class="nav-link" href="players.html">Player Bios
-                <span class="sr-only">(current)</span>
-              </a>
-            </li> -->
+                  <a class="nav-link" href="players.html">Player Bios
+                    <span class="sr-only">(current)</span>
+                  </a>
+                </li> -->
             <!-- <li class="nav-item ">
-              <a class="nav-link" href="compete.html">Compete
-                <span class="sr-only">(current)</span>
-              </a>
-            </li> -->
-            <!-- <li class="nav-item active">
-              <a class="nav-link" href="contact.html">Contact
-                <span class="sr-only">(current)</span>
-              </a>
-            </li> -->
+                  <a class="nav-link" href="compete.html">Compete
+                    <span class="sr-only">(current)</span>
+                  </a>
+                </li> -->
+            <!-- <li class="nav-item ">
+                  <a class="nav-link" href="contact.html">Contact
+                    <span class="sr-only">(current)</span>
+                  </a>
+                </li> -->
           </ul>
         </div>
       </nav>
     </div>
   </div>
-  <div class="container-fluid contact_us_bg_img">
+  <!-- <div class="container-fluid contact_us_bg_img">
     <div class="container">
       <div class="row">
         <a href="#" class="fh5co_con_123">
@@ -89,7 +89,7 @@
         <a href="#" class="fh5co_con pt-2"> About Us </a>
       </div>
     </div>
-  </div>
+  </div> -->
   <div class="container-fluid">
     <div class="container" style="padding: 60px">
       <h1>Our Team</h1>
@@ -197,13 +197,13 @@
       </div>
       <div class="row">
         <div class="col-12 col-md-6">
-          <div class="text-center d-inline-block">
-            <a class="fh5co_display_table">
-              <div class="fh5co_verticle_middle">
-                <i class="fa fa-search"></i>
-              </div>
-            </a>
-          </div>
+          <!-- <div class="text-center d-inline-block">
+              <a class="fh5co_display_table">
+                <div class="fh5co_verticle_middle">
+                  <i class="fa fa-search"></i>
+                </div>
+              </a>
+            </div> -->
           <div class="text-center d-inline-block">
             <a href="https://twitter.com/fh5co" target="_blank" class="fh5co_display_table">
               <div class="fh5co_verticle_middle">
@@ -238,13 +238,13 @@
               <a href="index.html" class="footer_last_part_menu">Home</a>
             </li>
             <li>
-              <a href="news.html" class="footer_last_part_menu">News</a>
+              <a href="news.html" class="footer_last_part_menu">Blog</a>
             </li>
             <li>
               <a href="events.html" class="footer_last_part_menu">Events</a>
             </li>
             <li>
-              <a href="videos.html" class="footer_last_part_menu">Videos</a>
+              <a href="videos.html" class="footer_last_part_menu">Latest Videos</a>
             </li>
             <li>
               <a href="sponsors.html" class="footer_last_part_menu">Sponsors</a>
@@ -256,12 +256,12 @@
             <li>
               <hr class="short">
             </li>
-            <li>
-              <a href="teams.html" class="footer_last_part_menu">Teams</a>
-            </li>
-            <li>
-              <a href="players.html" class="footer_last_part_menu">Players</a>
-            </li>
+            <!-- <li>
+                <a href="teams.html" class="footer_last_part_menu">Teams</a>
+              </li>
+              <li>
+                <a href="players.html" class="footer_last_part_menu">Players</a>
+              </li> -->
             <li>
               <a href="about.html" class="footer_last_part_menu">About</a>
             </li>
@@ -269,7 +269,10 @@
               <a href="contact.html" class="footer_last_part_menu">Contact</a>
             </li>
             <li>
-              <a href="terms.html" class="footer_last_part_menu">Legal</a>
+              <a href="terms.html" class="footer_last_part_menu">Terms</a>
+            </li>
+            <li>
+              <a href="privacy.html" class="footer_last_part_menu">Privacy</a>
             </li>
           </ul>
         </div>
