--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
   <script src="js/modernizr-3.5.0.min.js"></script>
 </head>
 
-<body class="single">
+<div class="single">
   <div class="container-fluid fh5co_padd_mediya padding_786">
     <div class="container padding_786">
       <nav class="navbar navbar-toggleable-md navbar-light ">
@@ -46,7 +46,7 @@
               </a>
             </li>
             <li class="nav-item ">
-              <a class="nav-link" href="news.html">News
+              <a class="nav-link" href="news.html">Blog
                 <span class="sr-only">(current)</span>
               </a>
             </li>
@@ -56,7 +56,7 @@
               </a>
             </li>
             <li class="nav-item ">
-              <a class="nav-link" href="videos.html">Videos
+              <a class="nav-link" href="videos.html">Latest Videos
                 <span class="sr-only">(current)</span>
               </a>
             </li>
@@ -80,223 +80,238 @@
       </nav>
     </div>
   </div>
+  <div id="fh5co-background-box">
   <div id="fh5co-title-box" style="background-image: url(images/camila-cordeiro-114636.jpg);">
     <div class="overlay"></div>
     <div class="page-title">
-      <h2>LIVE TWITCH STREAM</h2>
-      <h5 style="color:#fff; padding: 20px; width: 250px; margin: 60px auto; border: solid 1px rgb(255,255,255)">WATCH NOW</h5>
+      <!-- <h2>LIVE TWITCH STREAM</h2>
+      <h5 style="color:#fff; padding: 20px; width: 250px; margin: 60px auto; border: solid 1px rgb(255,255,255)">WATCH NOW</h5> -->
+    </div>
+  </div>
+</div>
+
+  <div class="container">
+    <div class="row">
+
+      <div class="col-12 col-md-9 py-4 Reserved">
+        <div class="container-fluid pb-4 pt-4 paddding">
+
+          <div class="container animate-box">
+            <div class="fh5co_heading fh5co_heading_border_bottom py-2 mb-4">
+              <a href="events.html"> Featured Content
+                <span class="sr-only">(current)</span>
+              </a>
+            </div>
+
+              <div class="owl-carousel owl-theme" id="slider2">
+              <div class="item px-2">
+                <div class="fh5co_hover_news_img">
+                  <div class="fh5co_news_img">
+                    <img src="images/39-324x235.jpg" alt="" />
+                  </div>
+                  <div>
+                    <a href="single.html" class="d-block fh5co_small_post_heading">
+                      <span class="">PUBG</span>
+                    </a>
+                    <div class="c_g">
+
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <div class="item px-2">
+                <div class="fh5co_hover_news_img">
+                  <div class="fh5co_news_img">
+                    <img src="images/39-324x235.jpg" alt="" />
+                  </div>
+                  <div>
+                    <a href="#" class="d-block fh5co_small_post_heading">
+                      <span class="">Event 2</span>
+                    </a>
+                    <div class="c_g">
+
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <div class="item px-2">
+                <div class="fh5co_hover_news_img">
+                  <div class="fh5co_news_img">
+                    <img src="images/39-324x235.jpg" alt="" />
+                  </div>
+                  <div>
+                    <a href="#" class="d-block fh5co_small_post_heading">
+                      <span class="">Event 3</span>
+                    </a>
+                    <div class="c_g">
+
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <div class="item px-2">
+                <div class="fh5co_hover_news_img">
+                  <div class="fh5co_news_img">
+                    <img src="images/39-324x235.jpg" alt="" />
+                  </div>
+                  <div>
+                    <a href="#" class="d-block fh5co_small_post_heading">
+                      <span class="">Event 4</span>
+                    </a>
+                    <div class="c_g">
+
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <div class="container-fluid pb-4 pt-5">
+          <div class="animate-box">
+            <div class="fh5co_heading fh5co_heading_border_bottom py-2 mb-4">
+              <a href="videos.html"> Latest Videos
+                <span class="sr-only">(current)</span>
+              </a>
+            </div>
+
+            <div class="owl-carousel owl-theme" id="slider3">
+              <div class="item px-2">
+                <div class="fh5co_hover_news_img">
+                  <div class="fh5co_news_img">
+                    <img src="images/39-324x235.jpg" alt="" />
+                  </div>
+                  <div>
+                    <a href="videos.html" class="d-block fh5co_small_post_heading">
+                      <span class="">Video 1</span>
+                    </a>
+                    <div class="c_g">
+
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <div class="item px-2">
+                <div class="fh5co_hover_news_img">
+                  <div class="fh5co_news_img">
+                    <img src="images/39-324x235.jpg" alt="" />
+                  </div>
+                  <div>
+                    <a href="#" class="d-block fh5co_small_post_heading">
+                      <span class="">Video 2</span>
+                    </a>
+                    <div class="c_g">
+
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <div class="item px-2">
+                <div class="fh5co_hover_news_img">
+                  <div class="fh5co_news_img">
+                    <img src="images/39-324x235.jpg" alt="" />
+                  </div>
+                  <div>
+                    <a href="#" class="d-block fh5co_small_post_heading">
+                      <span class="">Video 3</span>
+                    </a>
+                    <div class="c_g">
+
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <div class="item px-2">
+                <div class="fh5co_hover_news_img">
+                  <div class="fh5co_news_img">
+                    <img src="images/39-324x235.jpg" alt="" />
+                  </div>
+                  <div>
+                    <a href="#" class="d-block fh5co_small_post_heading">
+                      <span class="">Video 4</span>
+                    </a>
+                    <div class="c_g">
+
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <!-- <div class="container-fluid pb-4 pt-5">
+          <div class="animate-box">
+
+            <table cellpadding="0" cellspacing="0" border="0" class="datatable table table-responsive table-bordered">
+              <tbody>
+                <tr>
+                  <td>
+                    <img src="images/39-324x235.jpg" alt="" style="height: 150px; width: 250px">
+                    <p style="font-weight: 500; font-size: 18px; margin-top: 8px">Lorum Ipsum Dolet.</p>
+
+                  </td>
+                  <td>
+                    <img src="images/39-324x235.jpg" alt="" style="height: 150px; width: 250px">
+                    <p style="font-weight: 500; font-size: 18px; margin-top: 8px">Lorum Ipsum Dolet.</p>
+
+                  </td>
+                  <td>
+                    <img src="images/39-324x235.jpg" alt="" style="height: 150px; width: 250px">
+                    <p style="font-weight: 500; font-size: 18px; margin-top: 8px">Lorum Ipsum Dolet.</p>
+
+                  </td>
+                </tr>
+                <tr>
+                  <td>
+                    <img src="images/39-324x235.jpg" alt="" style="height: 150px; width: 250px">
+                    <p style="font-weight: 500; font-size: 18px; margin-top: 8px">Lorum Ipsum Dolet.</p>
+
+                  </td>
+                  <td>
+                    <img src="images/39-324x235.jpg" alt="" style="height: 150px; width: 250px">
+                    <p style="font-weight: 500; font-size: 18px; margin-top: 8px">Lorum Ipsum Dolet.</p>
+
+                  </td>
+                  <td>
+                    <img src="images/39-324x235.jpg" alt="" style="height: 150px; width: 250px">
+                    <p style="font-weight: 500; font-size: 18px; margin-top: 8px">Lorum Ipsum Dolet.</p>
+
+                  </td>
+                </tr>
+              </tbody>
+            </table>
+          </div>
+        </div> -->
+
+      </div>
+
+      <div class="col-md-3 col-sm-12" style="margin-top: 30px;">
+
+        <div class="animate-box" data-animate-effect="fadeInLeft">
+          <img src="images/sponsor-tall.png" class="img-responsive" style="width: 300px" />
+        </div>
+
+
+        <div class="animate-box" data-animate-effect="fadeInLeft">
+          <hr class="short hr-short-margin">
+          <img src="images/twitter.png" class="img-responsive" style="width: 300px" />
+        </div>
+
+        <div>
+          <hr class="short hr-short-margin">
+          <img src="images/fb.jpg" style="margin-bottom: 60px">
+        </div>
+
+      </div>
+
     </div>
   </div>
 
-  <div class="container-fluid pb-4 pt-5">
-    <div class="container animate-box">
-      <div>
-        <div class="fh5co_heading fh5co_heading_border_bottom py-2 mb-4">
-          <a href="events.html"> Events
-            <span class="sr-only">(current)</span>
-          </a>
-        </div>
-      </div>
-      <div class="owl-carousel owl-theme" id="slider2">
-        <div class="item px-2">
-          <div class="fh5co_hover_news_img">
-            <div class="fh5co_news_img">
-              <img src="images/39-324x235.jpg" alt="" />
-            </div>
-            <div>
-              <a href="single.html" class="d-block fh5co_small_post_heading">
-                <span class="">Event 1</span>
-              </a>
-              <div class="c_g">
-                <i class="fa fa-clock-o"></i> Oct 16,2017</div>
-            </div>
-          </div>
-        </div>
-        <div class="item px-2">
-          <div class="fh5co_hover_news_img">
-            <div class="fh5co_news_img">
-              <img src="images/39-324x235.jpg" alt="" />
-            </div>
-            <div>
-              <a href="#" class="d-block fh5co_small_post_heading">
-                <span class="">Event 2</span>
-              </a>
-              <div class="c_g">
-                <i class="fa fa-clock-o"></i> Oct 16,2017</div>
-            </div>
-          </div>
-        </div>
-        <div class="item px-2">
-          <div class="fh5co_hover_news_img">
-            <div class="fh5co_news_img">
-              <img src="images/39-324x235.jpg" alt="" />
-            </div>
-            <div>
-              <a href="#" class="d-block fh5co_small_post_heading">
-                <span class="">Event 3</span>
-              </a>
-              <div class="c_g">
-                <i class="fa fa-clock-o"></i> Oct 16,2017</div>
-            </div>
-          </div>
-        </div>
-        <div class="item px-2">
-          <div class="fh5co_hover_news_img">
-            <div class="fh5co_news_img">
-              <img src="images/39-324x235.jpg" alt="" />
-            </div>
-            <div>
-              <a href="#" class="d-block fh5co_small_post_heading">
-                <span class="">Event 4</span>
-              </a>
-              <div class="c_g">
-                <i class="fa fa-clock-o"></i> Oct 16,2017</div>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-  </div>
-  <div class="container-fluid pb-4 pt-5">
-    <div class="container animate-box">
-      <div>
-        <div class="fh5co_heading fh5co_heading_border_bottom py-2 mb-4">
-          <a href="news.html"> News
-            <span class="sr-only">(current)</span>
-          </a>
-        </div>
-      </div>
-      <div class="owl-carousel owl-theme" id="slider1">
-        <div class="item px-2">
-          <div class="fh5co_hover_news_img">
-            <div class="fh5co_news_img">
-              <img src="images/39-324x235.jpg" alt="" />
-            </div>
-            <div>
-              <a href="single-news.html" class="d-block fh5co_small_post_heading">
-                <span class="">Article 1</span>
-              </a>
-              <div class="c_g">
-                <i class="fa fa-clock-o"></i> Oct 16,2017</div>
-            </div>
-          </div>
-        </div>
-        <div class="item px-2">
-          <div class="fh5co_hover_news_img">
-            <div class="fh5co_news_img">
-              <img src="images/39-324x235.jpg" alt="" />
-            </div>
-            <div>
-              <a href="#" class="d-block fh5co_small_post_heading">
-                <span class="">Article 2</span>
-              </a>
-              <div class="c_g">
-                <i class="fa fa-clock-o"></i> Oct 16,2017</div>
-            </div>
-          </div>
-        </div>
-        <div class="item px-2">
-          <div class="fh5co_hover_news_img">
-            <div class="fh5co_news_img">
-              <img src="images/39-324x235.jpg" alt="" />
-            </div>
-            <div>
-              <a href="#" class="d-block fh5co_small_post_heading">
-                <span class="">Article 3</span>
-              </a>
-              <div class="c_g">
-                <i class="fa fa-clock-o"></i> Oct 16,2017</div>
-            </div>
-          </div>
-        </div>
-        <div class="item px-2">
-          <div class="fh5co_hover_news_img">
-            <div class="fh5co_news_img">
-              <img src="images/39-324x235.jpg" alt="" />
-            </div>
-            <div>
-              <a href="#" class="d-block fh5co_small_post_heading">
-                <span class="">Article 4</span>
-              </a>
-              <div class="c_g">
-                <i class="fa fa-clock-o"></i> Oct 16,2017</div>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-  </div>
-  <div class="container-fluid pb-4 pt-5">
-    <div class="container animate-box">
-      <div class="fh5co_heading fh5co_heading_border_bottom py-2 mb-4">
-        <a href="videos.html"> Videos
-          <span class="sr-only">(current)</span>
-        </a>
-      </div>
-      <div class="owl-carousel owl-theme" id="slider3">
-        <div class="item px-2">
-          <div class="fh5co_hover_news_img">
-            <div class="fh5co_news_img">
-              <img src="images/39-324x235.jpg" alt="" />
-            </div>
-            <div>
-              <a href="#" class="d-block fh5co_small_post_heading">
-                <span class="">Video 1</span>
-              </a>
-              <div class="c_g">
-                <i class="fa fa-clock-o"></i> Oct 16,2017</div>
-            </div>
-          </div>
-        </div>
-        <div class="item px-2">
-          <div class="fh5co_hover_news_img">
-            <div class="fh5co_news_img">
-              <img src="images/39-324x235.jpg" alt="" />
-            </div>
-            <div>
-              <a href="#" class="d-block fh5co_small_post_heading">
-                <span class="">Video 2</span>
-              </a>
-              <div class="c_g">
-                <i class="fa fa-clock-o"></i> Oct 16,2017</div>
-            </div>
-          </div>
-        </div>
-        <div class="item px-2">
-          <div class="fh5co_hover_news_img">
-            <div class="fh5co_news_img">
-              <img src="images/39-324x235.jpg" alt="" />
-            </div>
-            <div>
-              <a href="#" class="d-block fh5co_small_post_heading">
-                <span class="">Video 3</span>
-              </a>
-              <div class="c_g">
-                <i class="fa fa-clock-o"></i> Oct 16,2017</div>
-            </div>
-          </div>
-        </div>
-        <div class="item px-2">
-          <div class="fh5co_hover_news_img">
-            <div class="fh5co_news_img">
-              <img src="images/39-324x235.jpg" alt="" />
-            </div>
-            <div>
-              <a href="#" class="d-block fh5co_small_post_heading">
-                <span class="">Video 4</span>
-              </a>
-              <div class="c_g">
-                <i class="fa fa-clock-o"></i> Oct 16,2017</div>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-  </div>
-
-  <div class="container-fluid text-center animate-box">
+  <!-- <div class="container-fluid text-center animate-box">
     <img class="img-fluid" style="margin: 0px 0px 60px 0px" src="images/ad.jpg" />
-  </div>
+  </div> -->
 
   <div class="container-fluid fh5co_footer_right_reserved">
     <div class="container">
@@ -305,13 +320,13 @@
       </div>
       <div class="row">
         <div class="col-12 col-md-6">
-          <div class="text-center d-inline-block">
-            <a class="fh5co_display_table">
-              <div class="fh5co_verticle_middle">
-                <i class="fa fa-search"></i>
-              </div>
-            </a>
-          </div>
+          <!-- <div class="text-center d-inline-block">
+              <a class="fh5co_display_table">
+                <div class="fh5co_verticle_middle">
+                  <i class="fa fa-search"></i>
+                </div>
+              </a>
+            </div> -->
           <div class="text-center d-inline-block">
             <a href="https://twitter.com/fh5co" target="_blank" class="fh5co_display_table">
               <div class="fh5co_verticle_middle">
@@ -346,13 +361,13 @@
               <a href="index.html" class="footer_last_part_menu">Home</a>
             </li>
             <li>
-              <a href="news.html" class="footer_last_part_menu">News</a>
+              <a href="news.html" class="footer_last_part_menu">Blog</a>
             </li>
             <li>
               <a href="events.html" class="footer_last_part_menu">Events</a>
             </li>
             <li>
-              <a href="videos.html" class="footer_last_part_menu">Videos</a>
+              <a href="videos.html" class="footer_last_part_menu">Latest Videos</a>
             </li>
             <li>
               <a href="sponsors.html" class="footer_last_part_menu">Sponsors</a>
@@ -364,12 +379,12 @@
             <li>
               <hr class="short">
             </li>
-            <li>
-              <a href="teams.html" class="footer_last_part_menu">Teams</a>
-            </li>
-            <li>
-              <a href="players.html" class="footer_last_part_menu">Players</a>
-            </li>
+            <!-- <li>
+                <a href="teams.html" class="footer_last_part_menu">Teams</a>
+              </li>
+              <li>
+                <a href="players.html" class="footer_last_part_menu">Players</a>
+              </li> -->
             <li>
               <a href="about.html" class="footer_last_part_menu">About</a>
             </li>
@@ -377,7 +392,10 @@
               <a href="contact.html" class="footer_last_part_menu">Contact</a>
             </li>
             <li>
-              <a href="terms.html" class="footer_last_part_menu">Legal</a>
+              <a href="terms.html" class="footer_last_part_menu">Terms</a>
+            </li>
+            <li>
+              <a href="privacy.html" class="footer_last_part_menu">Privacy</a>
             </li>
           </ul>
         </div>
