--- a/players.html
+++ b/players.html
@@ -93,7 +93,7 @@
               </a>
             </li>
             <li class="nav-item ">
-              <a class="nav-link" href="news.html">News
+              <a class="nav-link" href="news.html">Blog
                 <span class="sr-only">(current)</span>
               </a>
             </li>
@@ -103,38 +103,28 @@
               </a>
             </li>
             <li class="nav-item ">
-              <a class="nav-link" href="videos.html">Videos
+              <a class="nav-link" href="videos.html">Latest Videos
                 <span class="sr-only">(current)</span>
               </a>
             </li>
-            <!-- <li class="nav-item active">
-              <a class="nav-link" href="players.html">Player Bios
-                <span class="sr-only">(current)</span>
-              </a>
-            </li> -->
             <!-- <li class="nav-item ">
-              <a class="nav-link" href="compete.html">Compete
-                <span class="sr-only">(current)</span>
-              </a>
-            </li> -->
+                  <a class="nav-link" href="players.html">Player Bios
+                    <span class="sr-only">(current)</span>
+                  </a>
+                </li> -->
             <!-- <li class="nav-item ">
-              <a class="nav-link" href="contact.html">Contact
-                <span class="sr-only">(current)</span>
-              </a>
-            </li> -->
+                  <a class="nav-link" href="compete.html">Compete
+                    <span class="sr-only">(current)</span>
+                  </a>
+                </li> -->
+            <!-- <li class="nav-item ">
+                  <a class="nav-link" href="contact.html">Contact
+                    <span class="sr-only">(current)</span>
+                  </a>
+                </li> -->
           </ul>
         </div>
       </nav>
-    </div>
-  </div>
-  <div class="container-fluid contact_us_bg_img">
-    <div class="container">
-      <div class="row">
-        <a href="#" class="fh5co_con_123">
-          <i class="fa fa-user"></i>
-        </a>
-        <a href="#" class="fh5co_con pt-2"> Players </a>
-      </div>
     </div>
   </div>
 
@@ -286,316 +276,22 @@
               <td class="center">Dave Smith</td>
               <td class="center">San Francisco, CA</td>
             </tr>
-            <tr class="gradeX">
-              <td>
-                <img src="images/user-circle.svg" style="height: 50px; width: 50px">
-                <td>
-                  Killz_Streak57
-                </td>
-                <td>
-                  <a href="teams.html">FaZe Clan</a>
-                </td>
-              </td>
-              <td class="center">Dave Smith</td>
-              <td class="center">San Francisco, CA</td>
-            </tr>
-            <tr class="gradeX">
-              <td>
-                <img src="images/user-circle.svg" style="height: 50px; width: 50px">
-                <td>
-                  Killz_Streak57
-                </td>
-                <td>
-                  <a href="teams.html">FaZe Clan</a>
-                </td>
-              </td>
-              <td class="center">Dave Smith</td>
-              <td class="center">San Francisco, CA</td>
-            </tr>
-            <tr class="gradeX">
-              <td>
-                <img src="images/user-circle.svg" style="height: 50px; width: 50px">
-                <td>
-                  Killz_Streak57
-                </td>
-                <td>
-                  <a href="teams.html">FaZe Clan</a>
-                </td>
-              </td>
-              <td class="center">Dave Smith</td>
-              <td class="center">San Francisco, CA</td>
-            </tr>
-            <tr class="gradeX">
-              <td>
-                <img src="images/user-circle.svg" style="height: 50px; width: 50px">
-                <td>
-                  Killz_Streak57
-                </td>
-                <td>
-                  <a href="teams.html">FaZe Clan</a>
-                </td>
-              </td>
-              <td class="center">Dave Smith</td>
-              <td class="center">San Francisco, CA</td>
-            </tr>
-            <tr class="gradeX">
-              <td>
-                <img src="images/user-circle.svg" style="height: 50px; width: 50px">
-                <td>
-                  Killz_Streak57
-                </td>
-                <td>
-                  <a href="teams.html">FaZe Clan</a>
-                </td>
-              </td>
-              <td class="center">Dave Smith</td>
-              <td class="center">San Francisco, CA</td>
-            </tr>
-            <tr class="gradeX">
-              <td>
-                <img src="images/user-circle.svg" style="height: 50px; width: 50px">
-                <td>
-                  Killz_Streak57
-                </td>
-                <td>
-                  <a href="teams.html">FaZe Clan</a>
-                </td>
-              </td>
-              <td class="center">Dave Smith</td>
-              <td class="center">San Francisco, CA</td>
-            </tr>
-            <tr class="gradeX">
-              <td>
-                <img src="images/user-circle.svg" style="height: 50px; width: 50px">
-                <td>
-                  Killz_Streak57
-                </td>
-                <td>
-                  <a href="teams.html">FaZe Clan</a>
-                </td>
-              </td>
-              <td class="center">Dave Smith</td>
-              <td class="center">San Francisco, CA</td>
-            </tr>
-            <tr class="gradeX">
-              <td>
-                <img src="images/user-circle.svg" style="height: 50px; width: 50px">
-                <td>
-                  Killz_Streak57
-                </td>
-                <td>
-                  <a href="teams.html">FaZe Clan</a>
-                </td>
-              </td>
-              <td class="center">Dave Smith</td>
-              <td class="center">San Francisco, CA</td>
-            </tr>
-            <tr class="gradeX">
-              <td>
-                <img src="images/user-circle.svg" style="height: 50px; width: 50px">
-                <td>
-                  Killz_Streak57
-                </td>
-                <td>
-                  <a href="teams.html">FaZe Clan</a>
-                </td>
-              </td>
-              <td class="center">Dave Smith</td>
-              <td class="center">San Francisco, CA</td>
-            </tr>
-            <tr class="gradeX">
-              <td>
-                <img src="images/user-circle.svg" style="height: 50px; width: 50px">
-                <td>
-                  Killz_Streak57
-                </td>
-                <td>
-                  <a href="teams.html">FaZe Clan</a>
-                </td>
-              </td>
-              <td class="center">Dave Smith</td>
-              <td class="center">San Francisco, CA</td>
-            </tr>
-            <tr class="gradeX">
-              <td>
-                <img src="images/user-circle.svg" style="height: 50px; width: 50px">
-                <td>
-                  Killz_Streak57
-                </td>
-                <td>
-                  <a href="teams.html">FaZe Clan</a>
-                </td>
-              </td>
-              <td class="center">Dave Smith</td>
-              <td class="center">San Francisco, CA</td>
-            </tr>
-            <tr class="gradeX">
-              <td>
-                <img src="images/user-circle.svg" style="height: 50px; width: 50px">
-                <td>
-                  Killz_Streak57
-                </td>
-                <td>
-                  <a href="teams.html">FaZe Clan</a>
-                </td>
-              </td>
-              <td class="center">Dave Smith</td>
-              <td class="center">San Francisco, CA</td>
-            </tr>
-            <tr class="gradeX">
-              <td>
-                <img src="images/user-circle.svg" style="height: 50px; width: 50px">
-                <td>
-                  Killz_Streak57
-                </td>
-                <td>
-                  <a href="teams.html">FaZe Clan</a>
-                </td>
-              </td>
-              <td class="center">Dave Smith</td>
-              <td class="center">San Francisco, CA</td>
-            </tr>
-            <tr class="gradeX">
-              <td>
-                <img src="images/user-circle.svg" style="height: 50px; width: 50px">
-                <td>
-                  Killz_Streak57
-                </td>
-                <td>
-                  <a href="teams.html">FaZe Clan</a>
-                </td>
-              </td>
-              <td class="center">Dave Smith</td>
-              <td class="center">San Francisco, CA</td>
-            </tr>
-            <tr class="gradeX">
-              <td>
-                <img src="images/user-circle.svg" style="height: 50px; width: 50px">
-                <td>
-                  Killz_Streak57
-                </td>
-                <td>
-                  <a href="teams.html">FaZe Clan</a>
-                </td>
-              </td>
-              <td class="center">Dave Smith</td>
-              <td class="center">San Francisco, CA</td>
-            </tr>
-            <tr class="gradeX">
-              <td>
-                <img src="images/user-circle.svg" style="height: 50px; width: 50px">
-                <td>
-                  Killz_Streak57
-                </td>
-                <td>
-                  <a href="teams.html">FaZe Clan</a>
-                </td>
-              </td>
-              <td class="center">Dave Smith</td>
-              <td class="center">San Francisco, CA</td>
-            </tr>
-            <tr class="gradeX">
-              <td>
-                <img src="images/user-circle.svg" style="height: 50px; width: 50px">
-                <td>
-                  Killz_Streak57
-                </td>
-                <td>
-                  <a href="teams.html">FaZe Clan</a>
-                </td>
-              </td>
-              <td class="center">Dave Smith</td>
-              <td class="center">San Francisco, CA</td>
-            </tr>
-            <tr class="gradeX">
-              <td>
-                <img src="images/user-circle.svg" style="height: 50px; width: 50px">
-                <td>
-                  Killz_Streak57
-                </td>
-                <td>
-                  <a href="teams.html">FaZe Clan</a>
-                </td>
-              </td>
-              <td class="center">Dave Smith</td>
-              <td class="center">San Francisco, CA</td>
-            </tr>
-            <tr class="gradeX">
-              <td>
-                <img src="images/user-circle.svg" style="height: 50px; width: 50px">
-                <td>
-                  Killz_Streak57
-                </td>
-                <td>
-                  <a href="teams.html">FaZe Clan</a>
-                </td>
-              </td>
-              <td class="center">Dave Smith</td>
-              <td class="center">San Francisco, CA</td>
-            </tr>
-            <tr class="gradeX">
-              <td>
-                <img src="images/user-circle.svg" style="height: 50px; width: 50px">
-                <td>
-                  Killz_Streak57
-                </td>
-                <td>
-                  <a href="teams.html">FaZe Clan</a>
-                </td>
-              </td>
-              <td class="center">Dave Smith</td>
-              <td class="center">San Francisco, CA</td>
-            </tr>
-            <tr class="gradeX">
-              <td>
-                <img src="images/user-circle.svg" style="height: 50px; width: 50px">
-                <td>
-                  Killz_Streak57
-                </td>
-                <td>
-                  <a href="teams.html">FaZe Clan</a>
-                </td>
-              </td>
-              <td class="center">Dave Smith</td>
-              <td class="center">San Francisco, CA</td>
-            </tr>
-            <tr class="gradeX">
-              <td>
-                <img src="images/user-circle.svg" style="height: 50px; width: 50px">
-                <td>
-                  Killz_Streak57
-                </td>
-                <td>
-                  <a href="teams.html">FaZe Clan</a>
-                </td>
-              </td>
-              <td class="center">Dave Smith</td>
-              <td class="center">San Francisco, CA</td>
-            </tr>
-            <tr class="gradeX">
-              <td>
-                <img src="images/user-circle.svg" style="height: 50px; width: 50px">
-                <td>
-                  Killz_Streak57
-                </td>
-                <td>
-                  <a href="teams.html">FaZe Clan</a>
-                </td>
-              </td>
-              <td class="center">Dave Smith</td>
-              <td class="center">San Francisco, CA</td>
-            </tr>
           </tbody>
-          <tfoot>
-            <tr>
-              <th></th>
-              <th>Gamer Tag</th>
-              <th>Team</th>
-              <th>Player Name</th>
-              <th>Hometown</th>
-            </tr>
-          </tfoot>
         </table>
+
+        <div class="row mx-0">
+          <div class="col-12 text-center pb-4 pt-4">
+            <a href="#" class="btn_mange_pagging">
+              <i class="fa fa-long-arrow-left"></i>&nbsp;&nbsp; Previous</a>
+            <a href="#" class="btn_pagging">1</a>
+            <a href="#" class="btn_pagging">2</a>
+            <a href="#" class="btn_pagging">3</a>
+            <a href="#" class="btn_pagging">...</a>
+            <a href="#" class="btn_mange_pagging">Next
+              <i class="fa fa-long-arrow-right"></i>&nbsp;&nbsp; </a>
+          </div>
+        </div>
+
       </div>
       <!-- </div> -->
 
@@ -611,13 +307,13 @@
       </div>
       <div class="row">
         <div class="col-12 col-md-6">
-          <div class="text-center d-inline-block">
-            <a class="fh5co_display_table">
-              <div class="fh5co_verticle_middle">
-                <i class="fa fa-search"></i>
-              </div>
-            </a>
-          </div>
+          <!-- <div class="text-center d-inline-block">
+                <a class="fh5co_display_table">
+                  <div class="fh5co_verticle_middle">
+                    <i class="fa fa-search"></i>
+                  </div>
+                </a>
+              </div> -->
           <div class="text-center d-inline-block">
             <a href="https://twitter.com/fh5co" target="_blank" class="fh5co_display_table">
               <div class="fh5co_verticle_middle">
@@ -652,13 +348,13 @@
               <a href="index.html" class="footer_last_part_menu">Home</a>
             </li>
             <li>
-              <a href="news.html" class="footer_last_part_menu">News</a>
+              <a href="news.html" class="footer_last_part_menu">Blog</a>
             </li>
             <li>
               <a href="events.html" class="footer_last_part_menu">Events</a>
             </li>
             <li>
-              <a href="videos.html" class="footer_last_part_menu">Videos</a>
+              <a href="videos.html" class="footer_last_part_menu">Latest Videos</a>
             </li>
             <li>
               <a href="sponsors.html" class="footer_last_part_menu">Sponsors</a>
@@ -670,12 +366,12 @@
             <li>
               <hr class="short">
             </li>
-            <li>
-              <a href="teams.html" class="footer_last_part_menu">Teams</a>
-            </li>
-            <li>
-              <a href="players.html" class="footer_last_part_menu">Players</a>
-            </li>
+            <!-- <li>
+                  <a href="teams.html" class="footer_last_part_menu">Teams</a>
+                </li>
+                <li>
+                  <a href="players.html" class="footer_last_part_menu">Players</a>
+                </li> -->
             <li>
               <a href="about.html" class="footer_last_part_menu">About</a>
             </li>
@@ -683,7 +379,10 @@
               <a href="contact.html" class="footer_last_part_menu">Contact</a>
             </li>
             <li>
-              <a href="terms.html" class="footer_last_part_menu">Legal</a>
+              <a href="terms.html" class="footer_last_part_menu">Terms</a>
+            </li>
+            <li>
+              <a href="privacy.html" class="footer_last_part_menu">Privacy</a>
             </li>
           </ul>
         </div>
