--- a/privacy.html
+++ b/privacy.html
@@ -108,20 +108,20 @@
               </a>
             </li>
             <!-- <li class="nav-item ">
-                  <a class="nav-link" href="players.html">Player Bios
-                    <span class="sr-only">(current)</span>
-                  </a>
-                </li> -->
+                          <a class="nav-link" href="players.html">Player Bios
+                            <span class="sr-only">(current)</span>
+                          </a>
+                        </li> -->
             <!-- <li class="nav-item ">
-                  <a class="nav-link" href="compete.html">Compete
-                    <span class="sr-only">(current)</span>
-                  </a>
-                </li> -->
+                          <a class="nav-link" href="compete.html">Compete
+                            <span class="sr-only">(current)</span>
+                          </a>
+                        </li> -->
             <!-- <li class="nav-item ">
-                  <a class="nav-link" href="contact.html">Contact
-                    <span class="sr-only">(current)</span>
-                  </a>
-                </li> -->
+                          <a class="nav-link" href="contact.html">Contact
+                            <span class="sr-only">(current)</span>
+                          </a>
+                        </li> -->
           </ul>
         </div>
       </nav>
@@ -129,48 +129,43 @@
   </div>
 
   <div class="container padding">
-    <div class="container-fluid mb-4">
-      <div class="container">
-        <div class="row" style="padding: 60px">
-          <div class="col-12 col-md-12">
-            <img src="images/user-circle.svg" style="height: 50px; width: 50px; margin-bottom: 20px">
-            <span style="font-size: 25px; vertical-align: middle; margin-left: 10px">Sponsor 1</span>
-            <p>Lorem ipsum dolor sit amet, id eum etiam affert mucius, maiorum liberavisse ea mea. Posse velit debet ex vis,
-              sed eu laudem aliquando incorrupte. Cum sapientem sadipscing in, alii ferri insolens et sit, nostrum singulis
-              vel et. Adhuc corrumpit mel ut. Viris scripserit an sit. Cu has dicat voluptua, et sit altera animal aperiri.
-              Id eripuit vivendo deterruisset est, eum cu delectus intellegat. Mel quot accusam partiendo no. No choro corrumpit
-              liberavisse vis, mei te dicit dicunt. His cu partem equidem molestie, ea usu oporteat euripidis definitiones.
-              Id vis habeo consectetuer, ei erant noster perfecto mea, quem elit necessitatibus ad cum.</p>
-              <img src="images/user-circle.svg" style="height: 50px; width: 50px; margin-bottom: 20px">
-              <span style="font-size: 25px; vertical-align: middle; margin-left: 10px">Sponsor 2</span>
-            <p>Lorem ipsum dolor sit amet, id eum etiam affert mucius, maiorum liberavisse ea mea. Posse velit debet ex vis,
-              sed eu laudem aliquando incorrupte. Cum sapientem sadipscing in, alii ferri insolens et sit, nostrum singulis
-              vel et. Adhuc corrumpit mel ut. Viris scripserit an sit. Cu has dicat voluptua, et sit altera animal aperiri.
-              Id eripuit vivendo deterruisset est, eum cu delectus intellegat. Mel quot accusam partiendo no. No choro corrumpit
-              liberavisse vis, mei te dicit dicunt. His cu partem equidem molestie, ea usu oporteat euripidis definitiones.
-              Id vis habeo consectetuer, ei erant noster perfecto mea, quem elit necessitatibus ad cum.</p>
-              <img src="images/user-circle.svg" style="height: 50px; width: 50px; margin-bottom: 20px">
-              <span style="font-size: 25px; vertical-align: middle; margin-left: 10px">Sponsor 3</span>
-            <p>Lorem ipsum dolor sit amet, id eum etiam affert mucius, maiorum liberavisse ea mea. Posse velit debet ex vis,
-              sed eu laudem aliquando incorrupte. Cum sapientem sadipscing in, alii ferri insolens et sit, nostrum singulis
-              vel et. Adhuc corrumpit mel ut. Viris scripserit an sit. Cu has dicat voluptua, et sit altera animal aperiri.
-              Id eripuit vivendo deterruisset est, eum cu delectus intellegat. Mel quot accusam partiendo no. No choro corrumpit
-              liberavisse vis, mei te dicit dicunt. His cu partem equidem molestie, ea usu oporteat euripidis definitiones.
-              Id vis habeo consectetuer, ei erant noster perfecto mea, quem elit necessitatibus ad cum.</p>
-              <img src="images/user-circle.svg" style="height: 50px; width: 50px; margin-bottom: 20px">
-              <span style="font-size: 25px; vertical-align: middle; margin-left: 10px">Sponsor 4</span>
-            <p>Lorem ipsum dolor sit amet, id eum etiam affert mucius, maiorum liberavisse ea mea. Posse velit debet ex vis,
-              sed eu laudem aliquando incorrupte. Cum sapientem sadipscing in, alii ferri insolens et sit, nostrum singulis
-              vel et. Adhuc corrumpit mel ut. Viris scripserit an sit. Cu has dicat voluptua, et sit altera animal aperiri.
-              Id eripuit vivendo deterruisset est, eum cu delectus intellegat. Mel quot accusam partiendo no. No choro corrumpit
-              liberavisse vis, mei te dicit dicunt. His cu partem equidem molestie, ea usu oporteat euripidis definitiones.
-              Id vis habeo consectetuer, ei erant noster perfecto mea, quem elit necessitatibus ad cum.</p>
-          </div>
+    <div class="row animate-box">
+      <div class="col-md-9 col-sm-12">
+
+        <div class="col-12 col-md-12" style="margin-top: 60px">
+          <h1>Privacy</h1>
+          <p>Lorem ipsum dolor sit amet, id eum etiam affert mucius, maiorum liberavisse ea mea. Posse velit debet ex vis, sed
+            eu laudem aliquando incorrupte. Cum sapientem sadipscing in, alii ferri insolens et sit, nostrum singulis vel
+            et. Adhuc corrumpit mel ut. Viris scripserit an sit. Cu has dicat voluptua, et sit altera animal aperiri. Id
+            eripuit vivendo deterruisset est, eum cu delectus intellegat. Mel quot accusam partiendo no. No choro corrumpit
+            liberavisse vis, mei te dicit dicunt. His cu partem equidem molestie, ea usu oporteat euripidis definitiones.
+            Id vis habeo consectetuer, ei erant noster perfecto mea, quem elit necessitatibus ad cum.</p>
+          <h2>1. ELIGIBILITY</h2>
+          <p>Lorem ipsum dolor sit amet, id eum etiam affert mucius, maiorum liberavisse ea mea. Posse velit debet ex vis, sed
+            eu laudem aliquando incorrupte. Cum sapientem sadipscing in, alii ferri insolens et sit, nostrum singulis vel
+            et. Adhuc corrumpit mel ut. Viris scripserit an sit. Cu has dicat voluptua, et sit altera animal aperiri. Id
+            eripuit vivendo deterruisset est, eum cu delectus intellegat. Mel quot accusam partiendo no. No choro corrumpit
+            liberavisse vis, mei te dicit dicunt. His cu partem equidem molestie, ea usu oporteat euripidis definitiones.
+            Id vis habeo consectetuer, ei erant noster perfecto mea, quem elit necessitatibus ad cum.</p>
+          <h2>2. ADDITIONAL TERMS</h2>
+          <p>Lorem ipsum dolor sit amet, id eum etiam affert mucius, maiorum liberavisse ea mea. Posse velit debet ex vis, sed
+            eu laudem aliquando incorrupte. Cum sapientem sadipscing in, alii ferri insolens et sit, nostrum singulis vel
+            et. Adhuc corrumpit mel ut. Viris scripserit an sit. Cu has dicat voluptua, et sit altera animal aperiri. Id
+            eripuit vivendo deterruisset est, eum cu delectus intellegat. Mel quot accusam partiendo no. No choro corrumpit
+            liberavisse vis, mei te dicit dicunt. His cu partem equidem molestie, ea usu oporteat euripidis definitiones.
+            Id vis habeo consectetuer, ei erant noster perfecto mea, quem elit necessitatibus ad cum.</p>
+          <h2>3. PASSWORD AND ACCOUNT SECURITY</h2>
+          <p>Lorem ipsum dolor sit amet, id eum etiam affert mucius, maiorum liberavisse ea mea. Posse velit debet ex vis, sed
+            eu laudem aliquando incorrupte. Cum sapientem sadipscing in, alii ferri insolens et sit, nostrum singulis vel
+            et. Adhuc corrumpit mel ut. Viris scripserit an sit. Cu has dicat voluptua, et sit altera animal aperiri. Id
+            eripuit vivendo deterruisset est, eum cu delectus intellegat. Mel quot accusam partiendo no. No choro corrumpit
+            liberavisse vis, mei te dicit dicunt. His cu partem equidem molestie, ea usu oporteat euripidis definitiones.
+            Id vis habeo consectetuer, ei erant noster perfecto mea, quem elit necessitatibus ad cum.</p>
         </div>
       </div>
+
     </div>
   </div>
-
 
   <div class="container-fluid fh5co_footer_right_reserved">
     <div class="container">
@@ -179,13 +174,13 @@
       </div>
       <div class="row">
         <div class="col-12 col-md-6">
-          <!-- <div class="text-center d-inline-block">
-              <a class="fh5co_display_table">
-                <div class="fh5co_verticle_middle">
-                  <i class="fa fa-search"></i>
-                </div>
-              </a>
-            </div> -->
+          <div class="text-center d-inline-block">
+            <a class="fh5co_display_table">
+              <div class="fh5co_verticle_middle">
+                <i class="fa fa-search"></i>
+              </div>
+            </a>
+          </div>
           <div class="text-center d-inline-block">
             <a href="https://twitter.com/fh5co" target="_blank" class="fh5co_display_table">
               <div class="fh5co_verticle_middle">
@@ -226,7 +221,7 @@
               <a href="events.html" class="footer_last_part_menu">Events</a>
             </li>
             <li>
-              <a href="videos.html" class="footer_last_part_menu">Latest Videos</a>
+              <a href="videos.html" class="footer_last_part_menu">Lateast Videos</a>
             </li>
             <li>
               <a href="sponsors.html" class="footer_last_part_menu">Sponsors</a>
@@ -239,11 +234,11 @@
               <hr class="short">
             </li>
             <!-- <li>
-                <a href="teams.html" class="footer_last_part_menu">Teams</a>
-              </li>
-              <li>
-                <a href="players.html" class="footer_last_part_menu">Players</a>
-              </li> -->
+                          <a href="teams.html" class="footer_last_part_menu">Teams</a>
+                        </li>
+                        <li>
+                          <a href="players.html" class="footer_last_part_menu">Players</a>
+                        </li> -->
             <li>
               <a href="about.html" class="footer_last_part_menu">About</a>
             </li>
