--- a/index.html
+++ b/index.html
@@ -80,15 +80,16 @@
       </nav>
     </div>
   </div>
+
   <div id="fh5co-background-box">
-  <div id="fh5co-title-box" style="background-image: url(images/camila-cordeiro-114636.jpg);">
-    <div class="overlay"></div>
-    <div class="page-title">
-      <!-- <h2>LIVE TWITCH STREAM</h2>
+    <div id="fh5co-title-box" style="background-image: url(images/gameplay.jpg)">
+      <div class="overlay"></div>
+      <div class="page-title">
+        <!-- <h2>LIVE TWITCH STREAM</h2>
       <h5 style="color:#fff; padding: 20px; width: 250px; margin: 60px auto; border: solid 1px rgb(255,255,255)">WATCH NOW</h5> -->
+      </div>
     </div>
   </div>
-</div>
 
   <div class="container">
     <div class="row">
@@ -98,17 +99,19 @@
 
           <div class="container animate-box">
             <div class="fh5co_heading fh5co_heading_border_bottom py-2 mb-4">
-              <a href="events.html"> Featured Content
+              <a href="events.html">Events
                 <span class="sr-only">(current)</span>
               </a>
             </div>
 
-              <div class="owl-carousel owl-theme" id="slider2">
+            <div class="owl-carousel owl-theme" id="slider2">
               <div class="item px-2">
                 <div class="fh5co_hover_news_img">
-                  <div class="fh5co_news_img">
-                    <img src="images/39-324x235.jpg" alt="" />
-                  </div>
+                  <a href="single.html">
+                    <div class="fh5co_news_img">
+                      <img src="images/39-324x235.jpg" alt="" />
+                    </div>
+                  </a>
                   <div>
                     <a href="single.html" class="d-block fh5co_small_post_heading">
                       <span class="">PUBG</span>
@@ -121,9 +124,11 @@
               </div>
               <div class="item px-2">
                 <div class="fh5co_hover_news_img">
-                  <div class="fh5co_news_img">
-                    <img src="images/39-324x235.jpg" alt="" />
-                  </div>
+                  <a href="#">
+                    <div class="fh5co_news_img">
+                      <img src="images/39-324x235.jpg" alt="" />
+                    </div>
+                  </a>
                   <div>
                     <a href="#" class="d-block fh5co_small_post_heading">
                       <span class="">Event 2</span>
@@ -136,9 +141,11 @@
               </div>
               <div class="item px-2">
                 <div class="fh5co_hover_news_img">
-                  <div class="fh5co_news_img">
-                    <img src="images/39-324x235.jpg" alt="" />
-                  </div>
+                  <a href="#">
+                    <div class="fh5co_news_img">
+                      <img src="images/39-324x235.jpg" alt="" />
+                    </div>
+                  </a>
                   <div>
                     <a href="#" class="d-block fh5co_small_post_heading">
                       <span class="">Event 3</span>
@@ -151,9 +158,11 @@
               </div>
               <div class="item px-2">
                 <div class="fh5co_hover_news_img">
-                  <div class="fh5co_news_img">
-                    <img src="images/39-324x235.jpg" alt="" />
-                  </div>
+                  <a href="#">
+                    <div class="fh5co_news_img">
+                      <img src="images/39-324x235.jpg" alt="" />
+                    </div>
+                  </a>
                   <div>
                     <a href="#" class="d-block fh5co_small_post_heading">
                       <span class="">Event 4</span>
@@ -179,9 +188,11 @@
             <div class="owl-carousel owl-theme" id="slider3">
               <div class="item px-2">
                 <div class="fh5co_hover_news_img">
-                  <div class="fh5co_news_img">
-                    <img src="images/39-324x235.jpg" alt="" />
-                  </div>
+                  <a href="videos.html">
+                    <div class="fh5co_news_img">
+                      <img src="images/39-324x235.jpg" alt="" />
+                    </div>
+                  </a>
                   <div>
                     <a href="videos.html" class="d-block fh5co_small_post_heading">
                       <span class="">Video 1</span>
@@ -194,9 +205,11 @@
               </div>
               <div class="item px-2">
                 <div class="fh5co_hover_news_img">
-                  <div class="fh5co_news_img">
-                    <img src="images/39-324x235.jpg" alt="" />
-                  </div>
+                  <a href="#">
+                    <div class="fh5co_news_img">
+                      <img src="images/39-324x235.jpg" alt="" />
+                    </div>
+                  </a>
                   <div>
                     <a href="#" class="d-block fh5co_small_post_heading">
                       <span class="">Video 2</span>
@@ -209,9 +222,11 @@
               </div>
               <div class="item px-2">
                 <div class="fh5co_hover_news_img">
-                  <div class="fh5co_news_img">
-                    <img src="images/39-324x235.jpg" alt="" />
-                  </div>
+                  <a href="#">
+                    <div class="fh5co_news_img">
+                      <img src="images/39-324x235.jpg" alt="" />
+                    </div>
+                  </a>
                   <div>
                     <a href="#" class="d-block fh5co_small_post_heading">
                       <span class="">Video 3</span>
@@ -224,9 +239,11 @@
               </div>
               <div class="item px-2">
                 <div class="fh5co_hover_news_img">
-                  <div class="fh5co_news_img">
-                    <img src="images/39-324x235.jpg" alt="" />
-                  </div>
+                  <a href="#">
+                    <div class="fh5co_news_img">
+                      <img src="images/39-324x235.jpg" alt="" />
+                    </div>
+                  </a>
                   <div>
                     <a href="#" class="d-block fh5co_small_post_heading">
                       <span class="">Video 4</span>
@@ -429,6 +446,6 @@
 
   </script>
 
-</body>
+  </body>
 
 </html>
