--- a/player1.html
+++ b/player1.html
@@ -83,20 +83,61 @@
 
   <div class="container-fluid player_bg_img">
     <div class="container">
-      <div class="row">
-        <a href="#" class="fh5co_con_123">
-          <i class="fa fa-user"></i>
-        </a>
-        <a href="#" class="fh5co_con pt-2"> Ohio Jackson </a>
-      </div>
+      <img src="images/player2.png" style="padding-top: 30px">
     </div>
   </div>
-  <div class="container-fluid">
-    <div class="container" style="padding: 60px">
-      <h1>The Thriller From McDiller</h1>
+
+  <div class="container" style="padding: 60px">
+    <div class="container" style="padding-top: 30px">
+      <h3>Dave Smith</h3>
+      <table cellpadding="0" cellspacing="0" border="0" class="datatable table table-striped table-bordered">
+        <thead>
+          <tr>
+            <th>Top Map</th>
+            <th>Time Played</th>
+            <th>% Played</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr class="gradeX">
+            <td>
+              Hoth: Imperial Base 2.0
+            </td>
+            <td>
+              1h 23m 20s</td>
+            <td>25%</td>
+          </tr>
+          <tr class="gradeX">
+            <td>
+              Hoth: Imperial Base 2.0
+            </td>
+            <td>
+              1h 23m 20s</td>
+            <td>25%</td>
+          </tr>
+          <tr class="gradeX">
+            <td>
+              Hoth: Imperial Base 2.0
+            </td>
+            <td>
+              1h 23m 20s</td>
+            <td>25%</td>
+          </tr>
+          <tr class="gradeX">
+            <td>
+              Hoth: Imperial Base 2.0
+            </td>
+            <td>
+              1h 23m 20s</td>
+            <td>25%</td>
+          </tr>
+        </tbody>
+      </table>
     </div>
 
-    <!-- <div class="container-fluid pb-4 pt-5">
+  </div>
+
+  <!-- <div class="container-fluid pb-4 pt-5">
       <div class="container animate-box">
         <div>
           <div class="fh5co_heading fh5co_heading_border_bottom py-2 mb-4">
@@ -136,7 +177,7 @@
       </div>
     </div> -->
 
-  </div>
+
 
   <div class="container-fluid fh5co_footer_right_reserved">
     <div class="container">
