--- a/players.html
+++ b/players.html
@@ -156,7 +156,9 @@
                   <a href="teams.html">FaZe Clan</a>
                 </td>
               </td>
-              <td class="center">Dave Smith</td>
+              <td class="center">
+                <a href="player1.html">Dave Smith</a>
+              </td>
               <td class="center">San Francisco, CA</td>
             </tr>
             <tr class="gradeX">
@@ -169,7 +171,9 @@
                   <a href="teams.html">FaZe Clan</a>
                 </td>
               </td>
-              <td class="center">Dave Smith</td>
+              <td class="center">
+                <a href="player1.html">Dave Smith</a>
+              </td>
               <td class="center">San Francisco, CA</td>
             </tr>
             <tr class="gradeX">
@@ -182,7 +186,9 @@
                   <a href="teams.html">FaZe Clan</a>
                 </td>
               </td>
-              <td class="center">Dave Smith</td>
+              <td class="center">
+                <a href="player1.html">Dave Smith</a>
+              </td>
               <td class="center">San Francisco, CA</td>
             </tr>
             <tr class="gradeX">
@@ -195,7 +201,9 @@
                   <a href="teams.html">FaZe Clan</a>
                 </td>
               </td>
-              <td class="center">Dave Smith</td>
+              <td class="center">
+                <a href="player1.html">Dave Smith</a>
+              </td>
               <td class="center">San Francisco, CA</td>
             </tr>
             <tr class="gradeX">
@@ -208,7 +216,9 @@
                   <a href="teams.html">FaZe Clan</a>
                 </td>
               </td>
-              <td class="center">Dave Smith</td>
+              <td class="center">
+                <a href="player1.html">Dave Smith</a>
+              </td>
               <td class="center">San Francisco, CA</td>
             </tr>
             <tr class="gradeX">
@@ -221,7 +231,9 @@
                   <a href="teams.html">FaZe Clan</a>
                 </td>
               </td>
-              <td class="center">Dave Smith</td>
+              <td class="center">
+                <a href="player1.html">Dave Smith</a>
+              </td>
               <td class="center">San Francisco, CA</td>
             </tr>
             <tr class="gradeX">
@@ -234,7 +246,9 @@
                   <a href="teams.html">FaZe Clan</a>
                 </td>
               </td>
-              <td class="center">Dave Smith</td>
+              <td class="center">
+                <a href="player1.html">Dave Smith</a>
+              </td>
               <td class="center">San Francisco, CA</td>
             </tr>
             <tr class="gradeX">
@@ -247,7 +261,9 @@
                   <a href="teams.html">FaZe Clan</a>
                 </td>
               </td>
-              <td class="center">Dave Smith</td>
+              <td class="center">
+                <a href="player1.html">Dave Smith</a>
+              </td>
               <td class="center">San Francisco, CA</td>
             </tr>
             <tr class="gradeX">
@@ -260,7 +276,9 @@
                   <a href="teams.html">FaZe Clan</a>
                 </td>
               </td>
-              <td class="center">Dave Smith</td>
+              <td class="center">
+                <a href="player1.html">Dave Smith</a>
+              </td>
               <td class="center">San Francisco, CA</td>
             </tr>
             <tr class="gradeX">
@@ -273,7 +291,9 @@
                   <a href="teams.html">FaZe Clan</a>
                 </td>
               </td>
-              <td class="center">Dave Smith</td>
+              <td class="center">
+                <a href="player1.html">Dave Smith</a>
+              </td>
               <td class="center">San Francisco, CA</td>
             </tr>
           </tbody>
