--- a/privacy.html
+++ b/privacy.html
@@ -221,7 +221,7 @@
               <a href="events.html" class="footer_last_part_menu">Events</a>
             </li>
             <li>
-              <a href="videos.html" class="footer_last_part_menu">Lateast Videos</a>
+              <a href="videos.html" class="footer_last_part_menu">Latest Videos</a>
             </li>
             <li>
               <a href="sponsors.html" class="footer_last_part_menu">Sponsors</a>
