--- a/single.html
+++ b/single.html
@@ -82,7 +82,7 @@
   </div>
 
   <div id="fh5co-background-box">
-    <div id="fh5co-title-box" style="background-image: url(images/gameplay.jpg);">
+    <div id="fh5co-title-box" class="img-fluid" style="background-image: url(images/gameplay.jpg);">
       <div class="overlay"></div>
       <div class="page-title">
         <!-- <h2>LIVE TWITCH STREAM</h2>
