--- a/events.html
+++ b/events.html
@@ -105,7 +105,9 @@
                   </div>
                 </div>
                 <div class="col-md-7 animate-box">
-                  <a href="single.html" class="fh5co_magna py-2"> PUBG </a>
+                  <a href="single.html" class="fh5co_magna py-2"> PUBG - 
+                    <span style="color: red"> live now</span>
+                  </a>
                   <div class="fh5co_consectetur"> Amet consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut
                     enim ad minim veniam, quis nostrud exercitation.
                     <div class="row" style="margin-top: 15px">
@@ -136,7 +138,65 @@
                 </div>
               </div>
 
-              <div class="row pb-4">
+              <div class="month">
+                <ul>
+                  <li class="prev">&#10094;</li>
+                  <li class="next">&#10095;</li>
+                  <li>
+                    August
+                    <br>
+                    <span style="font-size:18px">2017</span>
+                  </li>
+                </ul>
+              </div>
+
+              <ul class="weekdays">
+                <li>Mo</li>
+                <li>Tu</li>
+                <li>We</li>
+                <li>Th</li>
+                <li>Fr</li>
+                <li>Sa</li>
+                <li>Su</li>
+              </ul>
+
+              <ul class="days">
+                <li>1</li>
+                <li>2</li>
+                <li>3</li>
+                <li>4</li>
+                <li>5</li>
+                <li>6</li>
+                <li>7</li>
+                <li>8</li>
+                <li>9</li>
+                <li>
+                  <span class="active">10</span>
+                </li>
+                <li>11</li>
+                <li>12</li>
+                <li>13</li>
+                <li>14</li>
+                <li>15</li>
+                <li>16</li>
+                <li>17</li>
+                <li>18</li>
+                <li>19</li>
+                <li>20</li>
+                <li>21</li>
+                <li>22</li>
+                <li>23</li>
+                <li>24</li>
+                <li>25</li>
+                <li>26</li>
+                <li>27</li>
+                <li>28</li>
+                <li>29</li>
+                <li>30</li>
+                <li>31</li>
+              </ul>
+
+              <!-- <div class="row pb-4">
                 <div class="col-md-5">
                   <div class="fh5co_hover_news_img">
                     <div class="fh5co_news_img">
@@ -259,24 +319,10 @@
 
                   </div>
                 </div>
-              </div>
+              </div> -->
 
             </div>
           </div>
-
-          <div class="row mx-0">
-            <div class="col-12 text-center pb-4 pt-4">
-              <a href="#" class="btn_mange_pagging">
-                <i class="fa fa-long-arrow-left"></i>&nbsp;&nbsp; Previous</a>
-              <a href="#" class="btn_pagging">1</a>
-              <a href="#" class="btn_pagging">2</a>
-              <a href="#" class="btn_pagging">3</a>
-              <a href="#" class="btn_pagging">...</a>
-              <a href="#" class="btn_mange_pagging">Next
-                <i class="fa fa-long-arrow-right"></i>&nbsp;&nbsp; </a>
-            </div>
-          </div>
-
         </div>
       </div>
 
