--- a/terms.html
+++ b/terms.html
@@ -132,7 +132,7 @@
     <div class="row animate-box">
       <div class="col-md-9 col-sm-12">
 
-        <div class="col-12 col-md-12" style="margin-top: 60px">
+        <div class="col-12 col-md-12" style="padding: 60px">
           <h1>Terms of Use</h1>
           <p>Lorem ipsum dolor sit amet, id eum etiam affert mucius, maiorum liberavisse ea mea. Posse velit debet ex vis, sed
             eu laudem aliquando incorrupte. Cum sapientem sadipscing in, alii ferri insolens et sit, nostrum singulis vel
