--- a/players.html
+++ b/players.html
@@ -130,7 +130,7 @@
 
   <!-- PLAYER BIOS and CIRCLE PICS -->
   <div class="container-fluid animate-box">
-    <div class="container" style="padding: 60px">
+    <div class="container" style="padding-top: 60px">
 
       <!-- <div id="wrap"> -->
       <div class="container">
