--- a/sponsors.html
+++ b/sponsors.html
@@ -131,7 +131,7 @@
   <div class="container padding">
     <div class="container-fluid mb-4">
       <div class="container">
-        <div class="row" style="padding: 60px">
+        <div class="row" style="padding-top: 60px">
           <div class="col-12 col-md-12">
             <img src="images/user-circle.svg" style="height: 50px; width: 50px; margin-bottom: 20px">
             <span style="font-size: 25px; vertical-align: middle; margin-left: 10px">Sponsor 1</span>
