--- a/teams.html
+++ b/teams.html
@@ -140,7 +140,7 @@
 
           <!-- PLAYER BIOS and CIRCLE PICS -->
           <div class="container-fluid animate-box">
-            <div class="container" style="padding: 60px">
+            <div class="container">
 
               <div class="row">
                 <div class="col-md-4">
@@ -229,7 +229,7 @@
 
           <!-- PLAYER BIOS and CIRCLE PICS -->
           <div class="container-fluid animate-box">
-            <div class="container" style="padding: 60px">
+            <div class="container">
 
               <div class="row">
                 <div class="col-md-4">
@@ -318,14 +318,14 @@
 
           <!-- PLAYER BIOS and CIRCLE PICS -->
           <div class="container-fluid animate-box">
-            <div class="container" style="padding: 60px">
+            <div class="container">
 
               <div class="row">
                 <div class="col-md-4">
                   <img src="images/clan.png" class="img-fluid pull-right" style="margin-bottom: 30px">
                 </div>
                 <div class="col-md-8">
-                  <h1>Bazooka_Kill_Klowns</h1>
+                  <h1>Bazooka_Klowns</h1>
                   <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed et tincidunt erat. Nunc ac dolor imperdiet
                     sit amet ut elit. Nulla accumsan nisl sapien</p>
                   <hr class="short hr-short-margin">
