Sunday morning Commit

--- a/games.html
+++ b/games.html
@@ -132,7 +132,7 @@
     <div class="container animate-box">
       <div>
         <div class="fh5co_heading fh5co_heading_border_bottom py-2 mb-4">
-          Games
+          PUBG Games
         </div>
       </div>
       <div class="owl-carousel owl-theme" id="slider4">
