Sunday Night Push

--- a/index.html
+++ b/index.html
@@ -99,9 +99,8 @@
 
           <div class="container animate-box">
             <div class="fh5co_heading fh5co_heading_border_bottom py-2 mb-4">
-              <a href="events.html">Events
-                <span class="sr-only">(current)</span>
-              </a>
+              Featured Content
+              <span class="sr-only">(current)</span>
             </div>
 
             <div class="owl-carousel owl-theme" id="slider2">
@@ -117,7 +116,8 @@
                       <span class="">PUBG</span>
                     </a>
                     <div class="c_g">
-
+                      Lorum Ispum Description
+                      <br> Oct 2, 2019
                     </div>
                   </div>
                 </div>
@@ -134,7 +134,8 @@
                       <span class="">Event 2</span>
                     </a>
                     <div class="c_g">
-
+                      Lorum Ispum Description
+                      <br> Oct 2, 2019
                     </div>
                   </div>
                 </div>
@@ -151,7 +152,8 @@
                       <span class="">Event 3</span>
                     </a>
                     <div class="c_g">
-
+                      Lorum Ispum Description
+                      <br> Oct 2, 2019
                     </div>
                   </div>
                 </div>
@@ -168,7 +170,8 @@
                       <span class="">Event 4</span>
                     </a>
                     <div class="c_g">
-
+                      Lorum Ispum Description
+                      <br> Oct 2, 2019
                     </div>
                   </div>
                 </div>
@@ -198,7 +201,8 @@
                       <span class="">Video 1</span>
                     </a>
                     <div class="c_g">
-
+                      Lorum Ispum Description
+                      <br> Oct 2, 2019
                     </div>
                   </div>
                 </div>
@@ -215,7 +219,8 @@
                       <span class="">Video 2</span>
                     </a>
                     <div class="c_g">
-
+                      Lorum Ispum Description
+                      <br> Oct 2, 2019
                     </div>
                   </div>
                 </div>
@@ -232,7 +237,8 @@
                       <span class="">Video 3</span>
                     </a>
                     <div class="c_g">
-
+                      Lorum Ispum Description
+                      <br> Oct 2, 2019
                     </div>
                   </div>
                 </div>
@@ -249,7 +255,8 @@
                       <span class="">Video 4</span>
                     </a>
                     <div class="c_g">
-
+                      Lorum Ispum Description
+                      <br> Oct 2, 2019
                     </div>
                   </div>
                 </div>
@@ -304,25 +311,26 @@
 
       </div>
 
-      <div class="col-md-3 col-sm-12" style="margin-top: 30px;">
+      <div class="col-md-3 col-sm-12 right-rail" style="margin-top: 30px;">
+        <div class="container-fluid pb-4 pt-5">
 
-        <div class="animate-box" data-animate-effect="fadeInLeft">
-          <img src="images/sponsor-tall.png" class="img-responsive" style="width: 300px" />
+          <div class="animate-box" data-animate-effect="fadeInLeft">
+            <img src="images/sponsor-tall.png" class="img-responsive" style="width: 300px" />
+          </div>
+
+
+          <div class="animate-box" data-animate-effect="fadeInLeft">
+            <hr class="short hr-short-margin">
+            <img src="images/twitter.png" class="img-responsive" style="width: 300px" />
+          </div>
+
+          <div>
+            <hr class="short hr-short-margin">
+            <img src="images/fb.jpg" style="margin-bottom: 60px">
+          </div>
+
         </div>
-
-
-        <div class="animate-box" data-animate-effect="fadeInLeft">
-          <hr class="short hr-short-margin">
-          <img src="images/twitter.png" class="img-responsive" style="width: 300px" />
-        </div>
-
-        <div>
-          <hr class="short hr-short-margin">
-          <img src="images/fb.jpg" style="margin-bottom: 60px">
-        </div>
-
       </div>
-
     </div>
   </div>
 
