--- a/teams.html
+++ b/teams.html
@@ -144,7 +144,7 @@
 
               <div class="row">
                 <div class="col-md-4">
-                  <img src="images/clan.png" class="img-fluid pull-right" style="margin-bottom: 30px">
+                  <img src="images/clan.png" class="img-fluid pull-right clan-mobile" style="margin-bottom: 30px">
                 </div>
                 <div class="col-md-8">
                   <h1>Fa_Ze Clan</h1>
@@ -233,7 +233,7 @@
 
               <div class="row">
                 <div class="col-md-4">
-                  <img src="images/clan.png" class="img-fluid pull-right" style="margin-bottom: 30px">
+                  <img src="images/clan.png" class="img-fluid pull-right clan-mobile" style="margin-bottom: 30px">
                 </div>
                 <div class="col-md-8">
                   <h1>Campers-Delight</h1>
@@ -322,7 +322,7 @@
 
               <div class="row">
                 <div class="col-md-4">
-                  <img src="images/clan.png" class="img-fluid pull-right" style="margin-bottom: 30px">
+                  <img src="images/clan.png" class="img-fluid pull-right clan-mobile" style="margin-bottom: 30px">
                 </div>
                 <div class="col-md-8">
                   <h1>Bazooka_Klowns</h1>
