--- a/videos.html
+++ b/videos.html
@@ -141,58 +141,77 @@
             <span class="sr-only">(current)</span>
           </a>
         </div> -->
-
+        
+        <div class="row no-gutters" style="margin-left: 15px">
+        <ul class="list-unstyled">
+          <li>
+            <img src="images/feat-content.jpg" alt="" class="img-fluid">
+            <p style="font-weight: 500; font-size: 18px; margin-top: 8px">Lorum Ipsum Dolet.</p>
+            <p style="font-weight: 300; font-size: 16px; margin-top: -20px">Oct, 02 2018</p>
+            <p style="font-weight: 300; font-size: 14px; margin-top: -20px">2.2M views</p>
+          </li>
+        </ul>
+      </div>
         <table cellpadding="0" cellspacing="0" border="0" class="datatable table table-responsive table-bordered">
           <tbody>
             <tr>
               <td>
                 <img src="images/39-324x235.jpg" alt="" style="height: 150px; width: 250px">
                 <p style="font-weight: 500; font-size: 18px; margin-top: 8px">Lorum Ipsum Dolet.</p>
-                <p style="font-weight: 300; font-size: 16px; margin-top: -20px">2.2M views</p>
+                <p style="font-weight: 300; font-size: 16px; margin-top: -20px">Oct, 02 2018</p>
+                <p style="font-weight: 300; font-size: 14px; margin-top: -20px">2.2M views</p>
               </td>
               <td>
                 <img src="images/39-324x235.jpg" alt="" style="height: 150px; width: 250px">
                 <p style="font-weight: 500; font-size: 18px; margin-top: 8px">Lorum Ipsum Dolet.</p>
-                <p style="font-weight: 300; font-size: 16px; margin-top: -20px">2.2M views</p>
+                <p style="font-weight: 300; font-size: 16px; margin-top: -20px">Oct, 02 2018</p>
+                <p style="font-weight: 300; font-size: 14px; margin-top: -20px">2.2M views</p>
               </td>
               <td>
                 <img src="images/39-324x235.jpg" alt="" style="height: 150px; width: 250px">
                 <p style="font-weight: 500; font-size: 18px; margin-top: 8px">Lorum Ipsum Dolet.</p>
-                <p style="font-weight: 300; font-size: 16px; margin-top: -20px">2.2M views</p>
-              </td>
-            </tr>
-            <tr>
-              <td>
-                <img src="images/39-324x235.jpg" alt="" style="height: 150px; width: 250px">
-                <p style="font-weight: 500; font-size: 18px; margin-top: 8px">Lorum Ipsum Dolet.</p>
-                <p style="font-weight: 300; font-size: 16px; margin-top: -20px">2.2M views</p>
-              </td>
-              <td>
-                <img src="images/39-324x235.jpg" alt="" style="height: 150px; width: 250px">
-                <p style="font-weight: 500; font-size: 18px; margin-top: 8px">Lorum Ipsum Dolet.</p>
-                <p style="font-weight: 300; font-size: 16px; margin-top: -20px">2.2M views</p>
-              </td>
-              <td>
-                <img src="images/39-324x235.jpg" alt="" style="height: 150px; width: 250px">
-                <p style="font-weight: 500; font-size: 18px; margin-top: 8px">Lorum Ipsum Dolet.</p>
-                <p style="font-weight: 300; font-size: 16px; margin-top: -20px">2.2M views</p>
+                <p style="font-weight: 300; font-size: 16px; margin-top: -20px">Oct, 02 2018</p>
+                <p style="font-weight: 300; font-size: 14px; margin-top: -20px">2.2M views</p>
               </td>
             </tr>
             <tr>
               <td>
                 <img src="images/39-324x235.jpg" alt="" style="height: 150px; width: 250px">
                 <p style="font-weight: 500; font-size: 18px; margin-top: 8px">Lorum Ipsum Dolet.</p>
-                <p style="font-weight: 300; font-size: 16px; margin-top: -20px">2.2M views</p>
+                <p style="font-weight: 300; font-size: 16px; margin-top: -20px">Oct, 02 2018</p>
+                <p style="font-weight: 300; font-size: 14px; margin-top: -20px">2.2M views</p>
               </td>
               <td>
                 <img src="images/39-324x235.jpg" alt="" style="height: 150px; width: 250px">
                 <p style="font-weight: 500; font-size: 18px; margin-top: 8px">Lorum Ipsum Dolet.</p>
-                <p style="font-weight: 300; font-size: 16px; margin-top: -20px">2.2M views</p>
+                <p style="font-weight: 300; font-size: 16px; margin-top: -20px">Oct, 02 2018</p>
+                <p style="font-weight: 300; font-size: 14px; margin-top: -20px">2.2M views</p>
               </td>
               <td>
                 <img src="images/39-324x235.jpg" alt="" style="height: 150px; width: 250px">
                 <p style="font-weight: 500; font-size: 18px; margin-top: 8px">Lorum Ipsum Dolet.</p>
-                <p style="font-weight: 300; font-size: 16px; margin-top: -20px">2.2M views</p>
+                <p style="font-weight: 300; font-size: 16px; margin-top: -20px">Oct, 02 2018</p>
+                <p style="font-weight: 300; font-size: 14px; margin-top: -20px">2.2M views</p>
+              </td>
+            </tr>
+            <tr>
+              <td>
+                <img src="images/39-324x235.jpg" alt="" style="height: 150px; width: 250px">
+                <p style="font-weight: 500; font-size: 18px; margin-top: 8px">Lorum Ipsum Dolet.</p>
+                <p style="font-weight: 300; font-size: 16px; margin-top: -20px">Oct, 02 2018</p>
+                <p style="font-weight: 300; font-size: 14px; margin-top: -20px">2.2M views</p>
+              </td>
+              <td>
+                <img src="images/39-324x235.jpg" alt="" style="height: 150px; width: 250px">
+                <p style="font-weight: 500; font-size: 18px; margin-top: 8px">Lorum Ipsum Dolet.</p>
+                <p style="font-weight: 300; font-size: 16px; margin-top: -20px">Oct, 02 2018</p>
+                <p style="font-weight: 300; font-size: 14px; margin-top: -20px">2.2M views</p>
+              </td>
+              <td>
+                <img src="images/39-324x235.jpg" alt="" style="height: 150px; width: 250px">
+                <p style="font-weight: 500; font-size: 18px; margin-top: 8px">Lorum Ipsum Dolet.</p>
+                <p style="font-weight: 300; font-size: 16px; margin-top: -20px">Oct, 02 2018</p>
+                <p style="font-weight: 300; font-size: 14px; margin-top: -20px">2.2M views</p>
               </td>
             </tr>
           </tbody>
@@ -210,7 +229,7 @@
               <i class="fa fa-long-arrow-right"></i>&nbsp;&nbsp; </a>
           </div>
         </div>
-        
+
       </div>
 
       <div class="col-md-3 col-sm-12" style="margin-top: 30px;">
