--- a/news.html
+++ b/news.html
@@ -98,9 +98,15 @@
               </div>
             </div>
             <div class="col-md-7 animate-box">
-              <a href="single.html" class="fh5co_magna py-2"> Magna aliqua ut enim ad minim veniam quis nostrud quis xercitation ullamco. </a>
-              <a href="#" class="fh5co_mini_time py-3">
-                Thomson Smith - April 18,2016 </a>
+              <a href="single.html" class="fh5co_magna py-2 "> Magna aliqua ut enim ad minim veniam quis nostrud quis xercitation ullamco. </a>
+              <div>
+                <a href="#" class="d-block fh5co_small_post_heading">
+                  <span class="">Thomash Smith</span>
+                </a>
+                <div class="c_g">
+                  <i class="fa fa-clock-o"></i> April 18, 2018</div>
+              </div>
+              <br>
               <div class="fh5co_consectetur"> Amet consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim
                 ad minim veniam, quis nostrud exercitation.
               </div>
@@ -117,8 +123,14 @@
             </div>
             <div class="col-md-7">
               <a href="single.html" class="fh5co_magna py-2"> Magna aliqua ut enim ad minim veniam quis nostrud quis xercitation ullamco. </a>
-              <a href="#" class="fh5co_mini_time py-3">
-                Thomson Smith - April 18,2016 </a>
+              <div>
+                <a href="#" class="d-block fh5co_small_post_heading">
+                  <span class="">Thomash Smith</span>
+                </a>
+                <div class="c_g">
+                  <i class="fa fa-clock-o"></i> April 18, 2018</div>
+              </div>
+              <br>
               <div class="fh5co_consectetur"> Quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in
                 reprehenderit in voluptate velit esse cillum dolore.
               </div>
@@ -141,8 +153,14 @@
             </div>
             <div class="col-md-7">
               <a href="single.html" class="fh5co_magna py-2"> Magna aliqua ut enim ad minim veniam quis nostrud quis xercitation ullamco. </a>
-              <a href="#" class="fh5co_mini_time py-3">
-                Thomson Smith - April 18,2016 </a>
+              <div>
+                <a href="#" class="d-block fh5co_small_post_heading">
+                  <span class="">Thomash Smith</span>
+                </a>
+                <div class="c_g">
+                  <i class="fa fa-clock-o"></i> April 18, 2018</div>
+              </div>
+              <br>
               <div class="fh5co_consectetur"> Quis nostrud xercitation ullamco laboris nisi aliquip ex ea commodo consequat.
               </div>
             </div>
@@ -158,8 +176,14 @@
             </div>
             <div class="col-md-7">
               <a href="single.html" class="fh5co_magna py-2"> Magna aliqua ut enim ad minim veniam quis nostrud quis xercitation ullamco. </a>
-              <a href="#" class="fh5co_mini_time py-3">
-                Thomson Smith - April 18,2016 </a>
+              <div>
+                <a href="#" class="d-block fh5co_small_post_heading">
+                  <span class="">Thomash Smith</span>
+                </a>
+                <div class="c_g">
+                  <i class="fa fa-clock-o"></i> April 18, 2018</div>
+              </div>
+              <br>
               <div class="fh5co_consectetur"> Amet consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim
                 ad minim veniam, quis nostrud exercitation.
               </div>
@@ -185,6 +209,10 @@
             <a href="#" class="fh5co_tagg">Social</a>
             <a href="#" class="fh5co_tagg">Three</a>
           </div> -->
+
+          <div class="animate-box right-rail" data-animate-effect="fadeInRight">
+            <img src="images/sponsor-tall.png" class="img-responsive" style="width: 300px" />
+          </div>
           <div>
             <div class="fh5co_heading fh5co_heading_border_bottom py-2 mb-4">Most Popular</div>
           </div>
@@ -230,10 +258,6 @@
         <div class="col-12 text-center pb-4 pt-4">
           <a href="#" class="btn_mange_pagging">
             <i class="fa fa-long-arrow-left"></i>&nbsp;&nbsp; Previous</a>
-          <a href="#" class="btn_pagging">1</a>
-          <a href="#" class="btn_pagging">2</a>
-          <a href="#" class="btn_pagging">3</a>
-          <a href="#" class="btn_pagging">...</a>
           <a href="#" class="btn_mange_pagging">Next
             <i class="fa fa-long-arrow-right"></i>&nbsp;&nbsp; </a>
         </div>
